--- a/src/index.css
+++ b/src/index.css
@@ -159,3 +159,16 @@ a{
 .title:hover{
   color: #808080;
 }
+
+/* Filter */
+.filter{
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.filter div{
+  flex: 1;
+}
