--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,12 @@ footer{
   border: 0.1rem #464444 solid;
   background-color: #f0f0f0;
   cursor: pointer;
-  color: whitesmoke;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+  
 
 }
 .text-weight{
@@ -135,12 +140,9 @@ footer{
 }
 .button.primary {
   background-color: #373732;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
+  
   font-weight: 500;
+  color: whitesmoke;
 }
 
 .button.primary:hover{
@@ -171,4 +173,67 @@ a{
 
 .filter div{
   flex: 1;
+}
+
+
+/* Index.css */
+.cart {
+  padding: 1rem;
+  margin: 1rem;
+  display: flex;
+}
+.cart-header {
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+.cart-items {
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+.cart-items img {
+  width: 5rem;
+}
+.cart-items li {
+  display: flex;
+}
+.cart-items li div {
+  padding: 0.5rem;
+}
+.cart-items li div:last-child {
+  flex: 1;
+}
+.right {
+  text-align: right;
+}
+.total {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.total > div {
+  font-size: 2rem;
+}
+.total > div,
+.total > button {
+  flex: 1;
+}
+
+.remove-button{
+  padding: 1rem;
+  border: 0.1rem #464444 solid;
+  background-color: #f0f0f0;
+  cursor: pointer;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+background-color: #E50D14;
+font-weight: 500;
+}
+
+.remove-button:hover{
+  background-color: #181818;
+  color: whitesmoke;
 }
