--- a/src/index.css
+++ b/src/index.css
@@ -124,13 +124,11 @@ footer{
   border: 0.1rem #464444 solid;
   background-color: #f0f0f0;
   cursor: pointer;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-  
-
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
 }
 .text-weight{
   font-weight: 700;
@@ -224,16 +222,36 @@ a{
   border: 0.1rem #464444 solid;
   background-color: #f0f0f0;
   cursor: pointer;
-  border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
-background-color: #E50D14;
-font-weight: 500;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  background-color: #E50D14;
+  font-weight: 500;
 }
 
 .remove-button:hover{
   background-color: #181818;
   color: whitesmoke;
+}
+
+
+/* Checkout form */
+form {
+  width: 100%;
+}
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
 }
