--- a/src/index.css
+++ b/src/index.css
@@ -237,3 +237,24 @@ font-weight: 500;
   background-color: #181818;
   color: whitesmoke;
 }
+
+
+/* Checkout form */
+form {
+  width: 100%;
+}
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+}
+
