--- a/src/index.css
+++ b/src/index.css
@@ -155,10 +155,10 @@ a{
   text-decoration: none;
   color: #E6E6E8;
 }
-.title{
+.name{
   color: #E6E6C6;
 }
-.title:hover{
+.name:hover{
   color: #808080;
 }
 
